fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,6 @@
     top: 50%;
     left: 0;
     right: 0;
-    z-index: -1;
 }
 
 .button-wrapper {
@@ -53,7 +52,6 @@
     display: flex;
     justify-content: center;
     position: relative;
-    z-index: 1;
 }
 
 
@@ -63,6 +61,7 @@
     border: 0;
     border-radius: 50%;
     aspect-ratio: 1/1;
+    z-index: 1;
 }
 
 .button:hover {
